--- a/BuildingEscape/Config/DefaultGame.ini
+++ b/BuildingEscape/Config/DefaultGame.ini
@@ -1,5 +1,8 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=F44160B240FD50C06DB5CAA18F402707
+CompanyName=Krozet
+CompanyDistinguishedName=Krozet
+CopyrightNotice=Copyright Krozet 2017.
 
 [StartupActions]
 bAddPacks=True
